# DeepWeb

./: README.md  animation.py  main.py  pyproject.toml  requirements.txt
deepweblinks/: urls.txt
plugins/: fetch_request.py  link_analysis.py
